--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
-html {
-    width: 100%;
+html { height: 100%; }
+
+body {
+    background: black;
+    color: white;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
+h2 {
+    font-size: 5rem;
+    margin: 1rem;
+}
 h3 {
     font-size: 3rem;
     margin: 1rem;
